--- a/app/src/main/res/layout/activity_add_note.xml
+++ b/app/src/main/res/layout/activity_add_note.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -32,22 +33,28 @@
         <Button
             android:id="@+id/buttonSaveNote"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:text="Save Note" />
+            android:layout_weight="1"
+            android:text="Save Note"
+            app:icon="@android:drawable/ic_menu_save"
+            app:iconSize="22dp" />
 
         <Button
             android:id="@+id/buttonDeleteNote"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:text="Delete Note" />
+            android:layout_weight="1"
+            android:text="Delete Note"
+            app:icon="@android:drawable/ic_menu_delete"
+            app:iconSize="22dp" />
 
         <Button
             android:id="@+id/buttonHighlightText"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:text="Highlight Text" />
+            android:layout_weight="1"
+            android:text="Mark Text"
+            app:icon="@android:drawable/ic_menu_edit"
+            app:iconSize="22dp" />
     </LinearLayout>
 </LinearLayout>
