--- a/app/src/main/res/layout/activity_trash_can.xml
+++ b/app/src/main/res/layout/activity_trash_can.xml
@@ -10,6 +10,7 @@
         android:id="@+id/recyclerViewDeletedNotes"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,6 +21,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Back to notes"
+        app:icon="@android:drawable/ic_menu_revert"
+        app:iconSize="22dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
