--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    tools:ignore="ExtraText">
 
     <TextView
         android:id="@+id/textViewTitle"
@@ -11,5 +13,6 @@
         android:layout_height="wrap_content"
         android:textSize="18sp"
         android:textStyle="bold" />
+        style="@style/RecyclerViewItemText"
 
 </LinearLayout>
