--- a/app/src/main/res/layout/dialog_password.xml
+++ b/app/src/main/res/layout/dialog_password.xml
@@ -1,44 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="#575757"
     android:padding="16dp">
 
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/editTextPassword"
+    <TextView
+        android:id="@+id/textViewDialog"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        android:hint="@string/dialog_enter_password"
-        android:textColorHint="#a3a3a3"
-        android:inputType="textPassword" />
+        android:text="@string/dialog_password"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:gravity="center"/>
 
     <LinearLayout
+        android:id="@+id/buttons_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <Button
-            android:id="@+id/buttonCancel"
+            android:id="@+id/buttonPositive"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/dialog_enter_password_cancel"
+            android:text="@string/dialog_password_yes"
             android:textColor="#FFFFFF"
             android:backgroundTint="#c51212"
             android:layout_weight="1"
             style="?android:attr/buttonBarButtonStyle" />
+
         <Button
-            android:id="@+id/buttonEnter"
+            android:id="@+id/buttonNegative"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/dialog_enter_password_enter"
+            android:text="@string/dialog_password_no"
             android:textColor="#FFFFFF"
             android:backgroundTint="#c51212"
             android:layout_weight="1"
             style="?android:attr/buttonBarButtonStyle" />
     </LinearLayout>
-
 </LinearLayout>
-
