changed dialog ui elements and changed highlight text functionality

--- a/app/src/main/res/layout/dialog_enter_password.xml
+++ b/app/src/main/res/layout/dialog_enter_password.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -26,18 +27,14 @@
             android:layout_height="wrap_content"
             android:text="@string/dialog_enter_password_cancel"
             android:textColor="#FFFFFF"
-            android:backgroundTint="#c51212"
-            android:layout_weight="1"
-            style="?android:attr/buttonBarButtonStyle" />
+            android:layout_weight="1" />
         <Button
             android:id="@+id/buttonEnter"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/dialog_enter_password_enter"
             android:textColor="#FFFFFF"
-            android:backgroundTint="#c51212"
-            android:layout_weight="1"
-            style="?android:attr/buttonBarButtonStyle" />
+            android:layout_weight="1" />
     </LinearLayout>
 
 </LinearLayout>
