--- a/app/src/main/res/layout/dialog_password.xml
+++ b/app/src/main/res/layout/dialog_password.xml
@@ -28,9 +28,7 @@
             android:layout_height="wrap_content"
             android:text="@string/dialog_password_yes"
             android:textColor="#FFFFFF"
-            android:backgroundTint="#c51212"
-            android:layout_weight="1"
-            style="?android:attr/buttonBarButtonStyle" />
+            android:layout_weight="1" />
 
         <Button
             android:id="@+id/buttonNegative"
@@ -38,8 +36,6 @@
             android:layout_height="wrap_content"
             android:text="@string/dialog_password_no"
             android:textColor="#FFFFFF"
-            android:backgroundTint="#c51212"
-            android:layout_weight="1"
-            style="?android:attr/buttonBarButtonStyle" />
+            android:layout_weight="1" />
     </LinearLayout>
 </LinearLayout>
